--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'simple-bet-v1'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'war'
 
 sourceCompatibility = 1.8
 
@@ -10,5 +11,16 @@ repositories {
 }
 
 dependencies {
+    providedCompile group: 'org.jboss.spec', name: 'jboss-javaee-7.0', version: '1.0.3.Final', ext: 'pom'
+    providedCompile group: 'org.jboss.spec.javax.ejb', name: 'jboss-ejb-api_3.2_spec', version: '1.0.0.Final'
+    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.0.Final'
+    providedCompile group: 'javax.enterprise', name: 'cdi-api', version: '2.0'
+    compile group: 'org.jboss.spec.javax.ws.rs', name: 'jboss-jaxrs-api_2.0_spec', version: '1.0.0.Final'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.10.0'
+    compile group: 'javax.mail', name: 'mail', version: '1.4.7'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
 }
+
