--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,10 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.10.0'
     compile group: 'javax.mail', name: 'mail', version: '1.4.7'
     testCompile group: 'org.hamcrest', name: 'hamcrest-library', version: '1.3'
+    compile group: 'org.jboss.spec.javax.servlet', name: 'jboss-servlet-api_3.1_spec', version: '1.0.0.Final'
+    compile group: 'org.apache.struts', name: 'struts2-core', version: '2.5.14.1'
+    compile group: 'org.jboss.spec.javax.servlet.jstl', name: 'jboss-jstl-api_1.2_spec', version: '1.1.3.Final'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.3'
+
 }
 
